--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
             </span>
 
             <!-- next button -->
-            <!-- <span class="nextprev-btn" data-page="turn-2">
+            <span class="nextprev-btn" data-page="turn-2">
               <i class="bx bx-chevron-right"></i>
-            </span> -->
+            </span>
           </div>
         </div>
         <!-- page 3 & 4 -->
@@ -251,9 +251,9 @@
             </span>
 
             <!-- prev button -->
-            <!-- <span class="nextprev-btn back" data-page="turn-1">
+            <span class="nextprev-btn back" data-page="turn-1">
               <i class="bx bx-chevron-left"></i>
-            </span> -->
+            </span>
           </div>
 
           <!-- page 4 (my skills) -->
@@ -334,10 +334,10 @@
               <i class="bx bx-chevron-right"></i>
             </span>
 
-            <!-- prev button -->
-            <!-- <span class="nextprev-btn back" data-page="turn-2">
+            <!--prev button -->
+            <span class="nextprev-btn back" data-page="turn-2">
               <i class="bx bx-chevron-left"></i>
-            </span> -->
+            </span>
           </div>
 
           <!-- page 6 (contact me) -->
@@ -389,6 +389,17 @@
           <!-- page 7 (Mes centres d'intérets) -->
           <div class="page-front">
             <h1 class="title">Hello</h1>
+
+            <div class="portefolio-box">
+              <div class="info-title">
+                <h3>La suite</h3>
+              </div>
+              <ul>
+                <li>Un</li>
+                <li>deux</li>
+                <li>trois</li>
+              </ul>
+            </div>
             <span class="number-page">7</span>
 
             <!-- next button -->
@@ -397,9 +408,23 @@
             </span>
           </div>
 
+          <!---prev button-->
+          <span class="nextprev-btn back" data-page="turn-3"
+            ><i class="bx.bx-chevron-left"></i>
+          </span>
+
           <!-- page 8 (contact me) -->
           <div class="page-back">
             <h1 class="title">Coucou 2</h1>
+
+            <div class="contact-box">
+              <h3>coucou</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corrupti pariatur ut obcaecati totam esse dolorum quasi vel
+                aliquam debitis minima.
+              </p>
+            </div>
             <span class="number-page">8</span>
 
             <!-- prev button -->
