--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
               <i class="bx bx-chevron-left"></i>
             </span>
 
-            <a href="#" class="back-profile">
+            <!-- <a href="#" class="back-profile">
               <p>Profile</p>
               <i class="bx bxs-user"></i>
-            </a>
+            </a> -->
           </div>
         </div>
         <!-- page 7 & 8 -->
